# peargent

./: .env.example  .gitignore  PROMPTS.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: pr-label-test.yml  pr-publish-test.yml  pr-test.yml  publish-test.yml  publish.yml  test.yml
aria_project/: README.md
docs/: README.md  package-lock.json  package.json
docs/app/: layout.tsx  page.tsx
examples/: README.md  aggregate_metrics_demo.py  async_database_simple.py  async_streaming.py  comprehensive_historyconfig_example.py  comprehensive_test.py  context_management_example.py  costTrackerTest.py  cost_formatting_test.py  cost_tracking_test.py  database_tracing_custom_tables.py  database_tracing_postgres.py  database_tracing_sqlite.py  debug.py  formatTest.py  functional_custom_history_example.py  history_config_dsl_example.py  history_config_example.py  history_example.py  improved_tracing_example.py  my_example.py  parallel_tools_basic.py  pool_tracing_example.py  pool_tracing_parameter_test.py  postgresql_history_example.py  research_expert.py  spanTest.py  sqlite_history_example.py  storeTest.py  story_gen_expert.py  streaming_basic.py  streaming_observe.py  streaming_pool_observe.py  structured_output_comparison.py  testObserveComplete.py  traceTest.py  tracerTest.py
examples/01-getting-started/: anthropic_example.py  quickstart.py
peargent/: __init__.py  config.py
tests/: test_agent.py  test_datetime.py  test_discord.py  test_email.py  test_pool.py  test_text_extraction.py  test_websearch.py  test_wikipedia.py
(+76 files in other folders)
